--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт на GitHub Pages</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        h1 { color: #333; }
-    </style>
-</head>
-<body>
-    <h1>Привет, мир!</h1>
-    <p>Это мой первый сайт, размещенный на GitHub Pages.</p>
-    <p>Скоро здесь будет что-то более интересное!</p>
-</body>
+    <title>The Life of Coder</title>
+    <link
+      rel="icon"
+      href="https://code.s3.yandex.net/web-code/images/playlist-favicon.ico"
+    />
+  </head>
+  <body>
+    <h1>The Life of</h1>
+    <h2>Coder</h2>
+    <p><a target="_blank" href="https://music.yandex.ru/users/ynx-praktikum/playlists/1002">Плейлист</a> для беспечного занятия кодингом.</p>
+    <p>Один раз послушал — семь раз покодил.</p>
+    <img
+      src="https://pictures.s3.yandex.net/frontend-developer/free-course/mountains.jpg"
+      alt="Чёрно-белая фотография гор в тумане"
+    />
+  </body>
 </html>
